# securestore-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  build.bat  make-release
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
npm/: install.js  package-lock.json  package.json  ssclient.js  tsconfig.json
securestore/: Cargo.toml  README.md  build.rs
securestore/src/: errors.rs  lib.rs  serial.rs  shared.rs  tests.rs
securestore/src/crypto/: mod.rs  openssl_impl.rs  rustls_impl.rs
securestore/src/tests/: derives.rs  encrypted_blob.rs  key_management.rs  secrets.rs
src/: errors.rs  lib.rs  serial.rs  shared.rs  tests.rs
src/tests/: encrypted_blob.rs  key_management.rs  secrets.rs
ssclient/: Cargo.toml  README.md  build.rs
ssclient/.cargo/: config
ssclient/npm/: .gitignore  README.md  build.js  install.js  package-lock.json  package.json  ssclient.js  tsconfig.json
ssclient/npm/manifests/: v2.0.0.json  v2.0.1.json
ssclient/src/: client_tests.rs  main.rs
