[package]
name = "securestore"
version = "0.99.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>", "NeoSmart Technologies"]
edition = "2018"
description = "SecureStore API for creating or decrypting user secrets"
keywords = [ "encryption", "security", "secrets", "cryptography" ]
categories = [ "cryptography", "web-programming", "config" ]
license = "Apache-2.0 OR MIT"
homepage = "http://neosmart.net/blog/2020/securestore-open-secrets-format/"
repository = "https://github.com/neosmart/securestore-rs/tree/master/securestore"

[dependencies]
base64 = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(not(windows))'.dependencies.openssl]
version = "0.10"
features = [ ]

[target.'cfg(windows)'.dependencies.openssl]
version = "0.10"
features = [ "vendored" ]

[features]
# default = [ "openssl-vendored" ]
openssl-vendored = [ "openssl/vendored" ]

[dev-dependencies]
tempfile = "3.1"
