[package]
name = "securestore"
version = "0.100.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>", "NeoSmart Technologies"]
edition = "2018"
description = "SecureStore API for creating or decrypting user secrets"
keywords = [ "encryption", "security", "secrets", "cryptography" ]
categories = [ "cryptography", "web-programming", "config" ]
license = "Apache-2.0 OR MIT"
homepage = "http://neosmart.net/blog/2020/securestore-open-secrets-format/"
repository = "https://github.com/neosmart/securestore-rs/tree/master/securestore"

[dependencies]
radix64 = "0.6.2"
serde = { version = "1.0.140", features = [ "derive" ] }
serde_json = "1.0.82"

[target.'cfg(not(windows))'.dependencies.openssl]
version = "0.10.41"
features = [ ]

[target.'cfg(windows)'.dependencies.openssl]
version = "0.10.41"
# Building OpenSSL (via openssl/vendored) requires perl.exe on Windows, which
# is less likely to be installed than OpenSSL itself.
# features = [ "vendored" ]

[features]
# default = [ "openssl-vendored" ]
openssl-vendored = [ "openssl/vendored" ]

[dev-dependencies]
# `tempfile` is used in the tests to simplify cleanup
tempfile = "3.3.0"
