[package]
name = "ssclient"
version = "0.1.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
edition = "2018"

[dependencies]
atty = "0.2"
clap = { version = "2.33", default-features = false }
getch = "0.2"
securestore = { path = "../securestore", default-features = false }
serde_json = "1.0"

[features]
# default = [ "openssl-vendored" ]
openssl-vendored = [ "securestore/openssl-vendored" ]
