[package]
name = "ssclient"
version = "0.99.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>", "NeoSmart Technologies"]
edition = "2018"
description = "SecureStore client for managing user secrets"
keywords = [ "encryption", "security", "secrets", "cryptography" ]
categories = [ "cryptography", "web-programming", "development-tools", "command-line-utilities", "config" ]
license = "Apache-2.0 OR MIT"
homepage = "http://neosmart.net/blog/2020/securestore-open-secrets-format/"
repository = "https://github.com/neosmart/securestore-rs/tree/master/securestore"

[dependencies]
atty = "0.2.14"
clap = { version = "3.2.8", default-features = false, features = [ "std" ] }
getch = "0.3.1"
securestore = { path = "../securestore", version = "0.99.1", default-features = false }
serde_json = "1.0.82"

[features]
# default = [ "openssl-vendored" ]
openssl-vendored = [ "securestore/openssl-vendored" ]
