[package]
name = "ssclient"
version = "2.0.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>", "NeoSmart Technologies"]
edition = "2018"
rust-version = "1.78.0"
description = "SecureStore client for managing user secrets"
keywords = [ "encryption", "security", "secrets", "cryptography" ]
categories = [ "cryptography", "web-programming", "development-tools", "command-line-utilities", "config" ]
license = "Apache-2.0 OR MIT"
homepage = "https://neosmart.net/SecureStore/"
repository = "https://github.com/neosmart/securestore-rs"

[dependencies]
radix64 = "0.6.2"
clap = "4.5.0"
securestore = { path = "../securestore", version = "0.100.3", default-features = false }
serde_json = "1.0.114"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getch = "0.3.1"

[features]
default = [ "openssl" ]
# default = [ "openssl-vendored" ]
openssl = [ "securestore/openssl" ]
openssl-vendored = [ "securestore/openssl-vendored" ]
rustls = [ "securestore/rustls" ]
